--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   },
   "dependencies": {
     "cli-table": "^0.3.1",
-    "node-fetch": "^1.7.3"
+    "node-fetch": "^1.7.3",
+    "yargs": "^10.1.1"
+  },
+  "bin": {
+    "roi": "index.js"
   }
 }
