--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "node": ">=9"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "node bin/index.js"
   },
   "dependencies": {
     "cli-table": "^0.3.1",
@@ -28,6 +28,6 @@
     "access": "public"
   },
   "bin": {
-    "roi": "index.js"
+    "roi": "bin/index.js"
   }
 }
